[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/orange kid.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Tile_Sets/tileset_blue.tres" type="TileSet" id=2]
[ext_resource path="res://Characters/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/Endless_Mode.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Endless_Mode" type="Node2D"]
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 9, 0, 1, 10, 0, 2, 10, 0, 3, 10, 0, 4, 10, 0, 5, 10, 0, 6, 10, 0, 7, 10, 0, 8, 10, 0, 9, 10, 0, 10, 10, 0, 11, 10, 0, 12, 10, 0, 13, 10, 0, 14, 10, 0, 15, 10, 0, 16, 10, 0, 17, 10, 0, 18, 10, 0, 19, 10, 0, 20, 10, 0, 21, 10, 0, 22, 10, 0, 23, 10, 0, 24, 10, 0, 25, 10, 0, 26, 10, 0, 27, 10, 0, 28, 10, 0, 29, 11, 0, 65536, 12, 0, 65537, 13, 0, 65538, 13, 0, 65539, 13, 0, 65540, 13, 0, 65541, 13, 0, 65542, 13, 0, 65543, 13, 0, 65544, 13, 0, 65545, 13, 0, 65546, 13, 0, 65547, 13, 0, 65548, 13, 0, 65549, 13, 0, 65550, 13, 0, 65551, 13, 0, 65552, 13, 0, 65553, 13, 0, 65554, 13, 0, 65555, 13, 0, 65556, 13, 0, 65557, 13, 0, 65558, 13, 0, 65559, 13, 0, 65560, 13, 0, 65561, 13, 0, 65562, 13, 0, 65563, 13, 0, 65564, 13, 0, 65565, 14, 0, 131072, 12, 0, 131073, 13, 0, 131074, 13, 0, 131075, 13, 0, 131076, 13, 0, 131077, 13, 0, 131078, 13, 0, 131079, 13, 0, 131080, 13, 0, 131081, 13, 0, 131082, 13, 0, 131083, 13, 0, 131084, 13, 0, 131085, 13, 0, 131086, 13, 0, 131087, 13, 0, 131088, 13, 0, 131089, 13, 0, 131090, 13, 0, 131091, 13, 0, 131092, 13, 0, 131093, 13, 0, 131094, 13, 0, 131095, 13, 0, 131096, 13, 0, 131097, 13, 0, 131098, 13, 0, 131099, 13, 0, 131100, 13, 0, 131101, 14, 0, 196608, 12, 0, 196609, 13, 0, 196610, 13, 0, 196611, 13, 0, 196612, 13, 0, 196613, 13, 0, 196614, 13, 0, 196615, 13, 0, 196616, 13, 0, 196617, 13, 0, 196618, 13, 0, 196619, 13, 0, 196620, 13, 0, 196621, 13, 0, 196622, 13, 0, 196623, 13, 0, 196624, 13, 0, 196625, 13, 0, 196626, 13, 0, 196627, 13, 0, 196628, 13, 0, 196629, 13, 0, 196630, 13, 0, 196631, 13, 0, 196632, 13, 0, 196633, 13, 0, 196634, 13, 0, 196635, 13, 0, 196636, 13, 0, 196637, 14, 0, 262144, 12, 0, 262145, 13, 0, 262146, 13, 0, 262147, 13, 0, 262148, 13, 0, 262149, 13, 0, 262150, 13, 0, 262151, 13, 0, 262152, 13, 0, 262153, 13, 0, 262154, 13, 0, 262155, 13, 0, 262156, 13, 0, 262157, 13, 0, 262158, 13, 0, 262159, 13, 0, 262160, 13, 0, 262161, 13, 0, 262162, 13, 0, 262163, 13, 0, 262164, 13, 0, 262165, 13, 0, 262166, 13, 0, 262167, 13, 0, 262168, 13, 0, 262169, 13, 0, 262170, 13, 0, 262171, 13, 0, 262172, 13, 0, 262173, 14, 0, 327680, 12, 0, 327681, 13, 0, 327682, 13, 0, 327683, 13, 0, 327684, 13, 0, 327685, 13, 0, 327686, 13, 0, 327687, 13, 0, 327688, 13, 0, 327689, 13, 0, 327690, 13, 0, 327691, 13, 0, 327692, 13, 0, 327693, 13, 0, 327694, 13, 0, 327695, 13, 0, 327696, 13, 0, 327697, 13, 0, 327698, 13, 0, 327699, 13, 0, 327700, 13, 0, 327701, 13, 0, 327702, 13, 0, 327703, 13, 0, 327704, 13, 0, 327705, 13, 0, 327706, 13, 0, 327707, 13, 0, 327708, 13, 0, 327709, 14, 0, 393216, 12, 0, 393217, 13, 0, 393218, 13, 0, 393219, 13, 0, 393220, 13, 0, 393221, 13, 0, 393222, 13, 0, 393223, 13, 0, 393224, 13, 0, 393225, 13, 0, 393226, 13, 0, 393227, 13, 0, 393228, 13, 0, 393229, 13, 0, 393230, 13, 0, 393231, 13, 0, 393232, 13, 0, 393233, 13, 0, 393234, 13, 0, 393235, 13, 0, 393236, 13, 0, 393237, 13, 0, 393238, 13, 0, 393239, 13, 0, 393240, 13, 0, 393241, 13, 0, 393242, 13, 0, 393243, 13, 0, 393244, 13, 0, 393245, 14, 0, 458752, 12, 0, 458753, 13, 0, 458754, 13, 0, 458755, 13, 0, 458756, 13, 0, 458757, 13, 0, 458758, 13, 0, 458759, 13, 0, 458760, 13, 0, 458761, 13, 0, 458762, 13, 0, 458763, 13, 0, 458764, 13, 0, 458765, 13, 0, 458766, 13, 0, 458767, 13, 0, 458768, 13, 0, 458769, 13, 0, 458770, 13, 0, 458771, 13, 0, 458772, 13, 0, 458773, 13, 0, 458774, 13, 0, 458775, 13, 0, 458776, 13, 0, 458777, 13, 0, 458778, 13, 0, 458779, 13, 0, 458780, 13, 0, 458781, 14, 0, 524288, 12, 0, 524289, 13, 0, 524290, 13, 0, 524291, 13, 0, 524292, 13, 0, 524293, 13, 0, 524294, 13, 0, 524295, 13, 0, 524296, 13, 0, 524297, 13, 0, 524298, 13, 0, 524299, 13, 0, 524300, 13, 0, 524301, 13, 0, 524302, 13, 0, 524303, 13, 0, 524304, 13, 0, 524305, 13, 0, 524306, 13, 0, 524307, 13, 0, 524308, 13, 0, 524309, 13, 0, 524310, 13, 0, 524311, 13, 0, 524312, 13, 0, 524313, 13, 0, 524314, 13, 0, 524315, 13, 0, 524316, 13, 0, 524317, 14, 0, 589824, 12, 0, 589825, 13, 0, 589826, 13, 0, 589827, 13, 0, 589828, 13, 0, 589829, 13, 0, 589830, 13, 0, 589831, 13, 0, 589832, 13, 0, 589833, 13, 0, 589834, 13, 0, 589835, 13, 0, 589836, 13, 0, 589837, 13, 0, 589838, 13, 0, 589839, 13, 0, 589840, 13, 0, 589841, 13, 0, 589842, 13, 0, 589843, 13, 0, 589844, 13, 0, 589845, 13, 0, 589846, 13, 0, 589847, 13, 0, 589848, 13, 0, 589849, 13, 0, 589850, 13, 0, 589851, 13, 0, 589852, 13, 0, 589853, 14, 0, 655360, 12, 0, 655361, 13, 0, 655362, 13, 0, 655363, 13, 0, 655364, 13, 0, 655365, 13, 0, 655366, 13, 0, 655367, 13, 0, 655368, 13, 0, 655369, 13, 0, 655370, 13, 0, 655371, 13, 0, 655372, 13, 0, 655373, 13, 0, 655374, 13, 0, 655375, 13, 0, 655376, 13, 0, 655377, 13, 0, 655378, 13, 0, 655379, 13, 0, 655380, 13, 0, 655381, 13, 0, 655382, 13, 0, 655383, 13, 0, 655384, 13, 0, 655385, 13, 0, 655386, 13, 0, 655387, 13, 0, 655388, 13, 0, 655389, 14, 0, 720896, 12, 0, 720897, 13, 0, 720898, 13, 0, 720899, 13, 0, 720900, 13, 0, 720901, 13, 0, 720902, 13, 0, 720903, 13, 0, 720904, 13, 0, 720905, 13, 0, 720906, 13, 0, 720907, 13, 0, 720908, 13, 0, 720909, 13, 0, 720910, 13, 0, 720911, 13, 0, 720912, 13, 0, 720913, 13, 0, 720914, 13, 0, 720915, 13, 0, 720916, 13, 0, 720917, 13, 0, 720918, 13, 0, 720919, 13, 0, 720920, 13, 0, 720921, 13, 0, 720922, 13, 0, 720923, 13, 0, 720924, 13, 0, 720925, 14, 0, 786432, 12, 0, 786433, 13, 0, 786434, 13, 0, 786435, 13, 0, 786436, 13, 0, 786437, 13, 0, 786438, 13, 0, 786439, 13, 0, 786440, 13, 0, 786441, 13, 0, 786442, 13, 0, 786443, 13, 0, 786444, 13, 0, 786445, 13, 0, 786446, 13, 0, 786447, 13, 0, 786448, 13, 0, 786449, 13, 0, 786450, 13, 0, 786451, 13, 0, 786452, 13, 0, 786453, 13, 0, 786454, 13, 0, 786455, 13, 0, 786456, 13, 0, 786457, 13, 0, 786458, 13, 0, 786459, 13, 0, 786460, 13, 0, 786461, 14, 0, 851968, 12, 0, 851969, 13, 0, 851970, 13, 0, 851971, 13, 0, 851972, 13, 0, 851973, 13, 0, 851974, 13, 0, 851975, 13, 0, 851976, 13, 0, 851977, 13, 0, 851978, 13, 0, 851979, 13, 0, 851980, 13, 0, 851981, 13, 0, 851982, 13, 0, 851983, 13, 0, 851984, 13, 0, 851985, 13, 0, 851986, 13, 0, 851987, 13, 0, 851988, 13, 0, 851989, 13, 0, 851990, 13, 0, 851991, 13, 0, 851992, 13, 0, 851993, 13, 0, 851994, 13, 0, 851995, 13, 0, 851996, 13, 0, 851997, 14, 0, 917504, 12, 0, 917505, 13, 0, 917506, 13, 0, 917507, 13, 0, 917508, 13, 0, 917509, 13, 0, 917510, 13, 0, 917511, 13, 0, 917512, 13, 0, 917513, 13, 0, 917514, 13, 0, 917515, 13, 0, 917516, 13, 0, 917517, 13, 0, 917518, 13, 0, 917519, 13, 0, 917520, 13, 0, 917521, 13, 0, 917522, 13, 0, 917523, 13, 0, 917524, 13, 0, 917525, 13, 0, 917526, 13, 0, 917527, 13, 0, 917528, 13, 0, 917529, 13, 0, 917530, 13, 0, 917531, 13, 0, 917532, 13, 0, 917533, 14, 0, 983040, 12, 0, 983041, 13, 0, 983042, 13, 0, 983043, 13, 0, 983044, 13, 0, 983045, 13, 0, 983046, 13, 0, 983047, 13, 0, 983048, 13, 0, 983049, 13, 0, 983050, 13, 0, 983051, 13, 0, 983052, 13, 0, 983053, 13, 0, 983054, 13, 0, 983055, 13, 0, 983056, 13, 0, 983057, 13, 0, 983058, 13, 0, 983059, 13, 0, 983060, 13, 0, 983061, 13, 0, 983062, 13, 0, 983063, 13, 0, 983064, 13, 0, 983065, 13, 0, 983066, 13, 0, 983067, 13, 0, 983068, 13, 0, 983069, 14, 0, 1048576, 15, 0, 1048577, 16, 0, 1048578, 16, 0, 1048579, 16, 0, 1048580, 16, 0, 1048581, 16, 0, 1048582, 16, 0, 1048583, 16, 0, 1048584, 16, 0, 1048585, 16, 0, 1048586, 16, 0, 1048587, 16, 0, 1048588, 16, 0, 1048589, 16, 0, 1048590, 16, 0, 1048591, 16, 0, 1048592, 16, 0, 1048593, 16, 0, 1048594, 16, 0, 1048595, 16, 0, 1048596, 16, 0, 1048597, 16, 0, 1048598, 16, 0, 1048599, 16, 0, 1048600, 16, 0, 1048601, 16, 0, 1048602, 16, 0, 1048603, 16, 0, 1048604, 16, 0, 1048605, 17, 0 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 246, 129 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Level" type="Label" parent="CanvasLayer"]
margin_left = 425.0
margin_top = 3.0
margin_right = 476.0
margin_bottom = 23.0
grow_horizontal = 0
custom_fonts/font = SubResource( 1 )
text = "Level: 96"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spawn_locations" type="Position2D" parent="."]

[node name="spawn0" type="Position2D" parent="Spawn_locations"]
position = Vector2( 240, 35 )

[node name="spawn10" type="Position2D" parent="Spawn_locations"]
position = Vector2( 257, 37 )

[node name="spawn20" type="Position2D" parent="Spawn_locations"]
position = Vector2( 274, 41 )

[node name="spawn30" type="Position2D" parent="Spawn_locations"]
position = Vector2( 290, 46 )

[node name="spawn40" type="Position2D" parent="Spawn_locations"]
position = Vector2( 304, 59 )

[node name="spawn50" type="Position2D" parent="Spawn_locations"]
position = Vector2( 316, 71 )

[node name="spawn60" type="Position2D" parent="Spawn_locations"]
position = Vector2( 329, 85 )

[node name="spawn90" type="Position2D" parent="Spawn_locations"]
position = Vector2( 340, 135 )

[node name="spawn120" type="Position2D" parent="Spawn_locations"]
position = Vector2( 329, 185 )

[node name="spawn130" type="Position2D" parent="Spawn_locations"]
position = Vector2( 316, 199 )

[node name="spawn140" type="Position2D" parent="Spawn_locations"]
position = Vector2( 304, 211 )

[node name="spawn150" type="Position2D" parent="Spawn_locations"]
position = Vector2( 290, 224 )

[node name="spawn160" type="Position2D" parent="Spawn_locations"]
position = Vector2( 274, 229 )

[node name="spawn170" type="Position2D" parent="Spawn_locations"]
position = Vector2( 257, 233 )

[node name="spawn180" type="Position2D" parent="Spawn_locations"]
position = Vector2( 240, 235 )

[node name="spawn190" type="Position2D" parent="Spawn_locations"]
position = Vector2( 223, 233 )

[node name="spawn200" type="Position2D" parent="Spawn_locations"]
position = Vector2( 206, 229 )

[node name="spawn210" type="Position2D" parent="Spawn_locations"]
position = Vector2( 190, 224 )

[node name="spawn220" type="Position2D" parent="Spawn_locations"]
position = Vector2( 176, 211 )

[node name="spawn230" type="Position2D" parent="Spawn_locations"]
position = Vector2( 164, 199 )

[node name="spawn240" type="Position2D" parent="Spawn_locations"]
position = Vector2( 151, 185 )

[node name="spawn270" type="Position2D" parent="Spawn_locations"]
position = Vector2( 140, 135 )

[node name="spawn300" type="Position2D" parent="Spawn_locations"]
position = Vector2( 151, 85 )

[node name="spawn310" type="Position2D" parent="Spawn_locations"]
position = Vector2( 164, 71 )

[node name="spawn320" type="Position2D" parent="Spawn_locations"]
position = Vector2( 176, 59 )

[node name="spawn330" type="Position2D" parent="Spawn_locations"]
position = Vector2( 190, 46 )

[node name="spawn340" type="Position2D" parent="Spawn_locations"]
position = Vector2( 206, 41 )

[node name="spawn350" type="Position2D" parent="Spawn_locations"]
position = Vector2( 223, 37 )

[node name="spawn70" type="Position2D" parent="Spawn_locations"]
position = Vector2( 334, 101 )

[node name="spawn290" type="Position2D" parent="Spawn_locations"]
position = Vector2( 146, 101 )

[node name="spawn110" type="Position2D" parent="Spawn_locations"]
position = Vector2( 334, 169 )

[node name="spawn250" type="Position2D" parent="Spawn_locations"]
position = Vector2( 146, 169 )

[node name="spawn80" type="Position2D" parent="Spawn_locations"]
position = Vector2( 338, 118 )

[node name="spawn280" type="Position2D" parent="Spawn_locations"]
position = Vector2( 142, 118 )

[node name="spawn100" type="Position2D" parent="Spawn_locations"]
position = Vector2( 338, 152 )

[node name="spawn260" type="Position2D" parent="Spawn_locations"]
position = Vector2( 142, 152 )
